# authentication-fastapi

./: .gitignore  README.md  pyproject.toml
app/: db.py  main.py  model.py
